--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,164 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+*{
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: var(--body-font);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--body-color);
+  color: var(--text-color);
+  transition: .4s;
+  font-size: var(--normal-font-size);
+}
+
+h1, h2, h3{
+  color: var(--tittle-color);
+  font-weight: var(--font-semibold);
+}
+
+ul{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
+button{
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+img{
+  max-width: 100%;
+  height: auto;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root{
+  --header-height: 5rem;
+
+  /*----- Colors -----
+  Purple: hsl(250, 66%, 75%)
+  Blue: hsl(207,90%,72%)
+  Pink: hsl(356, 66%, 75%)
+  Teal: hsl(174, 63%, 62%)
+  */
+
+  --first-hue: 207;
+  --sat: 90%;
+  --lig: 72%;
+  --second-hue: 219;
+
+  --first-color: hsl(var(--first-hue), var(--sat), var(--lig));
+  --first-color-alt: hsl(var(--first-hue), var(--sat), 68%);
+  --tittle-color: hsl(var(--second-hue), 15%, 95%);
+  --text-color: hsl(var(--second-hue), 8%, 75%);
+  --text-color-light: hsl(var(--second-hue), 4%, 55%);
+  --body-color: hsl(var(--second-hue), 48%, 8%);
+  --container-color: hsl(var(--second-hue), 32%, 12%);
+  --link-color-hover: rgb(238, 228, 228);
+
+  /*---------- Fuentes y tipografias ----------*/
+
+  --body-font: 'Poppins', sans-serif;
+  --biggest-font-size: 2.35rem;
+  --h1-font-size: 1.8rem;
+  --h2-font-size: 1.6rem;
+  --h3-font-size: 1.3rem;
+  --normal-font-size: 1.15rem;
+  --small-font-size: 1rem;
+  --smaller-font-size: .9rem;
+  --tiny-font-size: .77rem;
+
+  /*------------ Font Weight ---------------*/
+
+  --font-medium: 500;
+  --font-semibold: 600;
+
+  /*----------- Z Index -------------*/
+
+  --z-fixed: 100;
+  --z-modal: 1000;
+
+}
+
+@media screen and (min-width: 900px){
+  :root{
+    --biggest-font-size: 2.7rem;
+    --h2-font-size: 2.2rem;
+    --small-font-size: 1.5rem;
+    --smaller-font-size: 1.2rem;
+    --tiny-font-size: .8rem;
+  }
+}
+
+/*---- Reusable Classes between components -----*/
+
+.container{
+  max-width: 800px;
+  margin: 0 auto;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+}
+
+.grid{
+  display: grid;
+  gap: 1.25rem;
+}
+
+.main{
+  overflow: hidden;
+}
+
+.section{
+  padding: 4.5rem 0 1rem;
+  margin-bottom: 2.5rem;
+}
+
+.section-title,
+.section-subtitle{
+  text-align: center;
+}
+
+.section-title{
+  font-size: var(--h2-font-size);
+  color: var(--first-color);
+  margin-bottom: 1.25rem;
+}
+
+.section-subtitle{
+  display: block;
+  font-size: var(--smaller-font-size);
+  color: var(--text-color-light);
+}
+
+/*------ Butons -----*/
+
+.button{
+  background-color: var(--first-color);
+  color: var(--body-color);
+  padding: .75rem 1rem;
+  border-radius: .5rem;
+  font-weight: var(--font-medium);
+  transition: .4s;
+}
+
+.button:hover{
+  background-color: var(--first-color-alt);
+  color: var(--body-color);
 }
