--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -16,13 +16,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
 .nav-logo{
   color: var(--first-color);
+  font-size: var(--smaller-font-size);
   font-weight: var(--font-medium);
   transition: .4s;
 }
@@ -44,15 +44,25 @@
 .nav-link{
   color: var(--text-color);
   font-size: var(--small-font-size);
-  padding: .6rem;
+  padding-left: .6rem;
+  padding-right: .6rem;
+  padding-bottom: .2rem;
   margin-right: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.nav-link:hover{
+.active-link{
+  font-size: 1.8rem;
+  background: none; 
+  border-bottom: solid 3px var(--text-color);
+  border-radius: 0;
+}
+
+.nav-link.active-link:hover{
   color: var(--link-color-hover);
+  border-bottom: solid 3px var(--link-color-hover);
 }
 
 .nav-link-name{
@@ -74,13 +84,6 @@
   display: none;
 }
 
-.active-link{
-  font-size: 1.9rem;
-  background: none; 
-  border-bottom: solid 3px var(--text-color);
-  border-radius: 0;
-}
-
 /*----- Movil and Tablets ------*/
 
 @media screen and (max-width: 500px){
@@ -98,7 +101,9 @@
     color: var(--body-color);
     font-size: 1.75rem;
     border-radius: 1rem;
-    margin-right: 0;
+    padding-bottom: .6rem;
+    margin-left: 1.2rem;
+    margin-right: 1.2rem;
   }
 
   .nav-link-name{
